<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextViewwzywaniePomocyHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewwzywaniePomocyPolecenie1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextViewwzywaniePomocyPolecenie2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextViewwzywaniePomocyPolecenie3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextViewwzywaniePomocyPolecenie4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:src="@drawable/przykladowe_zdjecie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_6"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzywanie_pomocy_polecenie_7"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonStracilemKontakt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wzywanie_pomocy_polecenie_stracilem_kontakt" />

    <Button
        android:id="@+id/buttonPrzyjechaloPogotowie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wzywanie_pomocy_polecenie_przyjechalo_pogotowie" />

</LinearLayout>