<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dotarlo_aed_polecenie"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dotarlo_aed_polecenie_1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dotarlo_aed_polecenie_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buttonDotarloAEDReaguje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dotarlo_aed_jest_reakcja" />

            <Button
                android:id="@+id/buttonDotarloAEDPrzyjechalySluzby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dotarlo_aed_przyjazd_sluzb" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>